--- a/index.org
+++ b/index.org
@@ -1,43 +1,47 @@
 #+REVEAL_ROOT: http://cdn.jsdelivr.net/reveal.js/3.0.0/
 #+Title: Hackování Wi-Fi
 #+Author: Filip Štaffa
-#+Email: fstaffa@cimpress.com
+#+Email: filip.staffa@gmail.com
 #+OPTIONS: email:true timestamp:nil
 #+OPTIONS: toc:nil
 #+OPTIONS: num:nil
 #+REVEAL_ROOT: https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.6.0/
 
-* Jak funguje Wi-Fi
+* Wi-Fi
+- Bezdrátová komunikace
+- Bezlicenční pásmo
 - Standard IEEE 802.11
-* [[./images/osi2.jpg]]
+** [[./images/osi2.jpg]]
 ** Problémy
  - Každý může odposlouchávat
  - Management frame lze spoofovat
 ** Deauthentiction attack
 ** Co je vidět
- - Všechny access pointy včetně MAC adres a připojených klientů
- - Klienti kteří nejsou připojení
+- Všechny access pointy včetně MAC adres a připojených klientů
+- Klienti kteří maji zapnutou WiFi
 ** [[./images/active-passive.png]]
-** [[./images/directed-null-probe.jpg]]
+** Probe requesty
+- Lze sledovat klienty pomocí MAC adresy
+- MAC address randomization
 
-#+BEGIN_NOTES
-Power level
- Zákonem nastavené
- https://w.wol.ph/2015/08/28/maximum-wifi-transmission-power-country/
-#+END_NOTES
+  #+BEGIN_NOTES
+  Power level
+   Zákonem nastavené
+   https://w.wol.ph/2015/08/28/maximum-wifi-transmission-power-country/
+  #+END_NOTES
 * Proč hackovat
 - Internet zadarmo
 - Přístup do intranetu
 - Odposlouchávání komunikace
 - Man In The Middle
-- Evil Twin
 * Nástroje
 - WiFi karta schopná monitor módu
 - Linux (Kali)
 ** [[./images/wifite2.png]]
 * Skrytá Wi-Fi
-- Lze snadno získat
+- SSID lze snadno zjistit
 - Narušuje soukromí
+** [[./images/directed-null-probe.jpg]]
 * Filtrování MAC adres
 - Nepraktické když se někdo potřebuje připojit
 - MAC adresy jsou veřejné
@@ -46,27 +50,32 @@ Power level
 macchanger -m 00:d0:70:00:20:69 eth0
 #+END_SRC
 * WEP
+- Od roku 1997
 - Stačí zachytit dostatek komunikace
 - Prolomení trvá cca 10 minut bez ohledu na heslo
 - Komunikaci lze vygenerovat i bez klienta
 * WPA-PSK/WPA2-PSK
+- Od roku 2004
+- TKIP a AES verze
 - Sdílený klíč pro všechny klienty
 - Nelze MITM attack bez hesla
-* Four way handshake
+- S heslem lze číst veškerou komunikaci v síti
+#+BEGIN_NOTES
 - PMK je hash jména sítě a hesla
 https://medium.com/@billbuchanan_27654/the-beginning-of-the-end-of-wpa-2-cracking-wpa-2-just-got-a-whole-lot-easier-55d7775a7a5a
 PMK explained https://www.ins1gn1a.com/understanding-wpa-psk-cracking/
-
+#+END_NOTES
 * WPS
 - WiFi Protected Setup
 - Má zjednodušit připojení zařízení
 ** 
  - 8 číslic
  - Online útok
- - 100 000 000 možností
+ - 100 000 000 možností  
  - Při 10 pokusech za sekundu v průměru 2 měsíce
 ** 
  - 1 check digit
+ - 7 efektivních číslic
  - 10 000 000 možností
  - Při 10 pokusech za sekundu v průměru 6 dnů
 ** 
@@ -74,13 +83,18 @@ PMK explained https://www.ins1gn1a.com/understanding-wpa-psk-cracking/
  - 11 000 možností
  - Při 1 pokusu za 5 sekund v průměru 8 hodin
 ** Pixie Dust
+- Při chybné implementaci lze heslo crackovat offline
+- 10 sekund
 * KRACK
 - Možnost vnutit klientovi i vysílači vlastní šifrovací klíč
-- Lze odposlouchávat komunikaci, ale ne ji měnit
-* new hack
+- Lze odposlouchávat komunikaci
+- V určitých implementacích lze modifikovat komunikaci
+* Nová zranitelnost
 - Nepotřebuje uživatele
 - Zneužívá roaming
+#+BEGIN_NOTES
 - https://hashcat.net/forum/thread-7717.html
+#+END_NOTES
 * WPA 2 Enterprise
 - RADIUS server
 - Při správné implementaci téměř neprolomitelné
@@ -88,14 +102,20 @@ PMK explained https://www.ins1gn1a.com/understanding-wpa-psk-cracking/
 - Server neprokazuje klíentovi znalost hesla
 - Bez důvěryhodných certifikátů lze snadno napadnout MITM
 * WPA 3
+- 2018
 - Forward Secrecy
-- Password protection on open networks
-- 
-* Privacy
-https://andreasgeo.com/wp-content/uploads/2014/06/Privacy-Leaks-from-Wi-Fi-Probing.pdfpython 
+- Šifrovaná komunikace i na otevřených sítích
+- Protected management frames
+#+BEGIN_NOTES
+https://andreasgeo.com/wp-content/uploads/2014/06/Privacy-Leaks-from-Wi-Fi-Probing.pdfpython
+#+END_NOTES
+* [[./images/encryption-over-time.png]]
+
 * Shrnutí
+- Zapnutá WiFi na mobilu umožňuje sledování
+- Skrytá síť i filtrování MAC adres moc nepomáhá
 - WEP není bezpečný
 - WPA 2/AES bez WPS s KRACK patchem a silným heslem je bezpečné
-- 
-- WPA 2 enterprise
-- Skrytá síť i filtrování MAC adres moc nepomáhá
+- VPN na veřejné sítě
+- WPA 2 enterprise je bezpečný když je správně nakonfigurovaný
+* Otázky
